Add make targets to build/clean the bencode example program.

--- a/bencode/Makefile
+++ b/bencode/Makefile
@@ -4,7 +4,19 @@ LDFLAGS=-e
 TARG=bencode
 
 GOFILES=\
-				decoder.go\
-				encoder.go
+		decoder.go\
+		encoder.go
 
 include $(GOROOT)/src/Make.pkg
+
+
+EXBIN=example
+EXOBJ=example.$O
+EXSRC=example.go
+
+ex:
+	$(GC) -o $(EXOBJ) $(EXSRC)
+	$(LD) -o $(EXBIN) $(EXOBJ)
+
+exclean:
+	rm -f $(EXBIN) $(EXOBJ)
